[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Hummus.py"
version = "1.0.0"
description = "An asynchronous and semi-decorationless (lol) API wrapper for Hummus, a Discord 2016 revival by Ziad87."
authors = [{name = "LG125YT", email = "lg125yt@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests"
    "fake-useragent"
    "aiohttp",
    "requests_toolbelt",
    "pillow",
    "aiohttp",
    "filetype",
    "websockets"
]
